apps/xwiki/overlays/recette/patch-labels.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xwiki
  selector:
    matchLabels:
      app: xwiki
      tier: app
      environment: recette
spec:
  template:
    metadata:
      labels:
        app: xwiki
        tier: app
        environment: recette
---
apiVersion: v1
kind: Service
metadata:
  name: xwiki-svc
spec:
  selector:
    app: xwiki
    tier: app
    environment: recette
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xwiki
spec:
  rules:
    - host: xwiki.recette.nudger.logo-solutions.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xwiki-svc
                port:
                  number: 8080
